fix: Margin on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -217,7 +217,7 @@ h1 {
 		border-radius: 0px;
 		align-items: center;
 		box-sizing: border-box;
-		padding: 5px;
+		padding: 30px 5px;
 	}
 
 	.projects-video {
